<resources>
    <string name="app_name">Room Design</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="enjoy_unlimited_downloads">Enjoy unlimited downloads</string>
    <string name="unlock_pro_features">Unlock pro features</string>
    <string name="go_pro">Go Pro</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="preferences">Preferences</string>
    <string name="rate_us">Rate us</string>
    <string name="share">Share</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="display_picture">Display Picture</string>
    <string name="change_name">Change Name</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="no_history_to_display">No history to display</string>
    <string name="no_favorites_to_display">No favorites to display</string>
    <string name="select_room_type">Select Room Type</string>
    <string name="view_all">View all</string>
    <string name="add_photo">Add Photo</string>
    <string name="select_room_style">Select Room Style</string>
    <string name="select_language">Select language</string>
    <string name="english">English</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_are_rewarded_with">You are rewarded with</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="instructions">Instructions</string>
    <string name="_3_tap_to_capture_the_photo">3. Tap to capture the photo.</string>
    <string name="_2_align_it_for_right_angles">2. Align it for right angles.</string>
    <string name="_1_ensure_good_lighting">1. Ensure good lighting.</string>
    <string name="navigate_back">Navigate Back</string>
    <string name="premium_purchase">Premium Purchase</string>
    <string name="unlock_unlimited">Unlock unlimited</string>
    <string name="gems">gems</string>
    <string name="ad_free">Ad-free</string>
    <string name="experience">experience</string>
    <string name="crown">Crown</string>
    <string name="on_your_profile">on your profile</string>
    <string name="access_to_detailed">Access to detailed</string>
    <string name="ai_renders">ai renders</string>
    <string name="discounts_in_future">Discounts in future</string>
    <string name="tools">tools</string>
    <string name="save_60">save 60%</string>
    <string name="yearly_subscription">Yearly Subscription</string>
    <string name="monthly_subscription">Monthly Subscription</string>
    <string name="weekly_subscription">Weekly Subscription</string>
    <string name="continue_btn">Continue</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="retake">Retake</string>
    <string name="use_it">Use it</string>
    <string name="generate">GENERATE</string>
    <string name="delete">Delete</string>
    <string name="default_notification_channel_id">Job progress</string>
    <string name="generated_image">Generated Image</string>
    <string name="regenerate">Regenerate</string>
    <string name="save">Save</string>
    <string name="purchase_gems">Purchase Gems</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rewards">Rewards</string>
    <string name="claim">Claim</string>
    <string name="watch_ads_videos">Watch ads / videos</string>
    <string name="get_a_reward_by_completing_your_profile">Get a reward by watching short ads</string>
    <string name="refer_a_friend">Refer a friend</string>
    <string name="get_a_reward_by_referring_roomify_ai_to_friend">Get a reward by referring Room Design to friend</string>
    <string name="daily_reward">Daily reward</string>
    <string name="tap_here_to_get_the_daily_reward">Tap here to get the daily reward</string>
    <string name="daily_ad_limit_reached_try_again_tomorrow">Daily ad limit reached. Try again tomorrow.</string>
    <string name="welcome">Welcome</string>
    <string name="get_the_inspirations">Get the inspirations</string>
    <string name="type_anything">Type anything...</string>
    <string name="storage_permission_denied">Storage Permission Denied</string>
    <string name="interior">Interior</string>
    <string name="exterior">Exterior</string>
    <string name="inspire">Inspire</string>
    <string name="edit">Edit</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="are_you_sure_you_want_to_delete_all">Are you sure you want to delete all?</string>
    <string name="make_sure_the_room_image_is_well_lit_and_captures_the_entire_space">Make sure the room image is well-lit and\ncaptures the entire space.</string>
    <string name="dinning_room">Dinning Room</string>
    <string name="upload_image">Upload Image</string>
    <string name="enter_prompt">Enter Prompt</string>
    <string name="watch_ad">Watch Ad</string>
    <string name="_0_100">0/100</string>
    <string name="image_detailing">Image Detailing</string>
    <string name="image_resolution">Image Resolution</string>
    <string name="hd">HD</string>
    <string name="_2k">2K</string>
    <string name="house_angle">House Angle</string>
    <string name="front">Front</string>
    <string name="back">Back</string>
    <string name="side">Side</string>
    <string name="room_style">Room Style</string>
    <string name="variations">Variations</string>
    <string name="edit_image">Edit Image</string>
    <string name="upscale">UpScale</string>
    <string name="upscaled">UpScaled</string>
    <string name="done">Done</string>
    <string name="or_click_on_anything_to_start">or click on anything to start</string>
    <string name="room_type">Room Type</string>
    <string name="add_mask">Add Mask</string>
    <string name="brush">Brush</string>
    <string name="eraser">Eraser</string>
    <string name="apply_mask">Apply Mask</string>
    <string name="tip">Tip:</string>
    <string name="popular">Popular</string>
    <string name="customize_your_style">Customize your style</string>
    <string name="living_room">Living Room</string>
    <string name="dining_room">Dining Room</string>
    <string name="kitchen">Kitchen</string>
    <string name="lounge">Lounge</string>
    <string name="hallway">Hallway</string>
    <string name="study_room">Study Room</string>
    <string name="office">Office</string>
    <string name="attic">Attic</string>
    <string name="gaming">Gaming</string>
    <string name="toilet">Toilet</string>
    <string name="bathroom">Bathroom</string>
    <string name="restaurant">Restaurant</string>
    <string name="minimalist">Minimalist</string>
    <string name="tropical">Tropical</string>
    <string name="japanese">Japanese</string>
    <string name="halloween">Halloween</string>
    <string name="farmhouse">Farmhouse</string>
    <string name="rustic">Rustic</string>
    <string name="cyberpunk">Cyberpunk</string>
    <string name="industrial">Industrial</string>
    <string name="bohemian">Bohemian</string>
    <string name="vintage">Vintage</string>
    <string name="modern">Modern</string>
    <string name="zen">Zen</string>
    <string name="_1000">1000</string>
    <string name="x_12">X 12</string>
    <string name="rs_22000">RS 22000</string>
    <string name="x_2">x 2</string>
    <string name="x_15">x 15</string>
    <string name="x_3">x 3</string>
    <string name="hello">Hello</string>
    <string name="uploading_image">Uploading Image</string>
    <string name="loading_ad">Loading Ad</string>
    <string name="customize_style">Customize your style</string>
    <string name="choose_design_preferences">Choose design preferences, select your room and style, add picture of your room to personalize your dream interior.</string>
    <string name="capture_your_space">Capture Your Space</string>
    <string name="use_camera">Use your device\'s camera to take a picture of your room. Our AI will do the rest!</string>
    <string name="ai_powered_designs">AI-Powered Designs</string>
    <string name="ai_analysis">Our AI analyzes your space and creates stunning interior designs just for you.</string>
    <string name="inspiration_1">Picture a loft space featuring exposed brick walls, polished concrete floors, and metal-framed furniture for an urban vibe. 8k, cinematic lighting, HDR</string>
    <string name="inspiration_2">Design a cozy den with exposed wooden beams, a stone fireplace, and leather armchairs for a refined yet rustic feel. 8k, cinematic lighting, HDR</string>
    <string name="inspiration_3">Design a kitchen in elegant, minimal style and give a modern look. 8k, cinematic lighting, HDR</string>
    <string name="inspiration_4">Design a home exterior in elegant, minimal style and give a modern look. 8k, cinematic lighting, HDR</string>
    <string name="inspiration_5">Design a home bathroom in elegant, minimal style and give a modern look. 8k, cinematic lighting, HDR</string>
    <string name="inspiration_6">Envision a serene bedroom with a platform bed, bamboo flooring, and soft lighting, evoking tranquility and simplicity. 8k, cinematic lighting, HDR</string>
    <string name="inspiration_7">Sun-drenched loft apartment with floor-to-ceiling windows, sleek built-in furniture, polished concrete floors, pops of vibrant color from minimalist art and sculptural lighting. (Think clean lines, natural materials, and uncluttered spaces.) 8k, cinematic lighting, HDR</string>
    <string name="inspiration_8">Crisp white stucco bungalow with geometric accents, flat roof, expansive glass doors connecting to a landscaped courtyard with a reflecting pool. (Think sharp angles, minimal landscaping, and seamless indoor-outdoor flow.) 8k, cinematic lighting, HDR</string>
    <string name="inspiration_9">Open-plan living area with walnut paneling, plush velvet sofas, sculptural coffee table, vibrant accent walls, and geometric patterned rugs. (Think warm wood tones, pops of color, and iconic furniture pieces.) 8k, cinematic lighting, HDR</string>
    <string name="inspiration_10">Cozy living room with a crackling fireplace, soft knitted throws, sheepskin rugs, wooden furniture painted in light shades, and plenty of candles for warm lighting. (Think natural materials, muted tones, and a focus on comfort and coziness.) 8k, cinematic lighting, HDR</string>
    <string name="inspiration_11">Design a home interior of a room in tropical style using light hanging. 8k, cinematic lighting, HDR</string>
    <string name="inspiration_12">Design a living room interior in zen style using light hanging. 8k, cinematic lighting, HDR</string>
    <string name="inspiration_13">Design a home exterior in bohemian style, cinematic lighting, HDR</string>
    <string name="inspiration_14">Elaborate gingerbread house with intricate architectural details, stained glass windows, a wraparound porch adorned with lace curtains, and a manicured lawn with sculpted hedges. (Think opulent details, rich colors, and a touch of gothic mystery.), cinematic lighting, HDR</string>
    <string name="inspiration_15">Sleek, monochromatic palette with pops of color from vibrant artwork or statement lighting. Clean lines and uncluttered surfaces, maximizing light and space. High-tech appliances seamlessly integrated into the cabinetry. Floating shelves or minimalist open shelving for display. Concrete countertops for a touch of industrial chic.</string>
    <string name="leaving_so_soon">Leaving so soon?</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
</resources>