<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_nav"
        android:icon="@drawable/nav_interior"
        android:title="@string/interior"
        app:cnb_backgroundColor="@color/bottom_nav_active_indi"
        app:cnb_iconColor="@color/selected_color"
        />
    <item
        android:id="@+id/exterior_nav"
        android:icon="@drawable/nav_exterior"
        android:title="@string/exterior"
        app:cnb_backgroundColor="@color/bottom_nav_active_indi"
        app:cnb_iconColor="@color/selected_color"
        />

    <item
        android:id="@+id/inspire_nav"
        android:icon="@drawable/nav_inspire"
        android:title="@string/inspire"
        app:cnb_backgroundColor="@color/bottom_nav_active_indi"
        app:cnb_iconColor="@color/selected_color"
        />

    <item
        android:id="@+id/inpaint_nav"
        android:icon="@drawable/colorfilter"
        android:title="@string/edit"
        app:cnb_backgroundColor="@color/bottom_nav_active_indi"
        app:cnb_iconColor="@color/selected_color"
        />
</menu>